# .agents

./: .gitignore  README.md  SESSION_SUMMARY.md  zymlink
repos/0xhubed/agent-trading-arena/: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
repos/0xhubed/agent-trading-arena/agent_arena/: __init__.py  cli.py  llm_utils.py
repos/0xhubed/agent-trading-arena/agent_arena/agentic/: __init__.py  base.py  graph.py  nodes.py  state.py
repos/0xhubed/agent-trading-arena/agent_arena/agentic/memory/: __init__.py  store.py
repos/0xhubed/agent-trading-arena/agent_arena/agentic/tools/: __init__.py  agent_performance.py  base.py  exemplars.py  history.py  multi_tf.py  pattern_matcher.py  portfolio_risk.py  principles.py  reflection.py  risk.py  rules.py  search.py  similar_situations.py  skills.py  technical.py
repos/0xhubed/agent-trading-arena/agent_arena/agents/: __init__.py  agentic_claude.py  agentic_gpt.py  agentic_llm.py  baselines.py  claude_trader.py  forum_aware_llm.py  forum_aware_trader.py  gpt_trader.py  index_fund.py  journal_aware_llm.py  langchain_trader.py  learning_trader.py  learning_trader_llm.py  llm_trader.py  model_registry.py  observer_agent.py  ollama_trader.py  prompt_utils.py  skill_aware_llm.py  skill_aware_trader.py  skill_writer.py  ta_trader.py
repos/0xhubed/agent-trading-arena/agent_arena/analysis/: __init__.py  bias_models.py  bias_scan.py  contagion.py  statistics.py
repos/0xhubed/agent-trading-arena/agent_arena/api/: __init__.py  app.py  routes.py  routes_backtest.py  routes_evolution.py  routes_experiment.py  routes_forum.py  routes_journal.py  routes_lab.py  routes_memory.py  routes_reflexion.py  websocket.py
repos/0xhubed/agent-trading-arena/agent_arena/backtest/: __init__.py  results.py  runner.py
repos/0xhubed/agent-trading-arena/agent_arena/codegen/: __init__.py  agent.py  findings.py  tools.py
repos/0xhubed/agent-trading-arena/agent_arena/core/: __init__.py  agent.py  arena.py  config.py  config_parser.py  context_builder.py  embeddings.py  indicators.py  loader.py  models.py  outcomes.py  regime.py  runner.py
repos/0xhubed/agent-trading-arena/agent_arena/data/: __init__.py  fetch_historical.py
repos/0xhubed/agent-trading-arena/agent_arena/evolution/: __init__.py  engine.py  fitness.py  genome.py  islands.py  llm_operators.py  novelty.py  pareto.py  storage.py
repos/0xhubed/agent-trading-arena/agent_arena/experiment/: __init__.py  cost_tracker.py  deployer.py  orchestrator.py  scheduler.py
repos/0xhubed/agent-trading-arena/agent_arena/forum/: __init__.py  models.py  observer_scheduler.py  runner.py  service.py
repos/0xhubed/agent-trading-arena/agent_arena/forum/agents/: __init__.py  contrarian.py  market_analyst.py
repos/0xhubed/agent-trading-arena/agent_arena/journal/: __init__.py  models.py  service.py
repos/0xhubed/agent-trading-arena/agent_arena/memory/: __init__.py  digestion.py  models.py  scoring.py
repos/0xhubed/agent-trading-arena/agent_arena/providers/: base.py  binance.py  fear_greed.py  historical.py  kraken.py
repos/0xhubed/agent-trading-arena/agent_arena/reflexion/: __init__.py  clustering.py  evoskill.py  exemplars.py  models.py  service.py
repos/0xhubed/agent-trading-arena/agent_arena/scenarios/: __init__.py  curator.py  models.py  provider.py  registry.py
repos/0xhubed/agent-trading-arena/agent_arena/storage/: __init__.py  archive.py  candles.py  observer_memory.py  postgres.py  protocol.py  sqlite.py
repos/0xhubed/agent-trading-arena/agent_arena/utils/: time.py
repos/0xhubed/agent-trading-arena/configs/: backtest_focused.yaml  experiment.yaml  forum_mvp.yaml  local_inference.yaml  production.yaml  quick_test.yaml
repos/0xhubed/agent-trading-arena/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
repos/0xhubed/agent-trading-arena/frontend/src/: App.tsx  config.ts  index.css
repos/0xhubed/agent-trading-arena/frontend/src/components/: AboutView.tsx  ActivityHighlights.tsx  AgentAvatar.tsx  AgentDetail.tsx  CompetitionBanner.tsx  Dashboard.tsx  EquityCurve.tsx  ErrorBoundary.tsx  ForumView.tsx  FundingFeed.tsx  Header.tsx  (+12 more)
repos/0xhubed/agent-trading-arena/scripts/: deploy.sh  migrate-to-thinkcentre.sh  migrate_to_postgres.py  preflight.py
repos/0xhubed/agent-trading-arena/tests/: test_bias_scan.py  test_contagion.py  test_genome_extended.py  test_scenarios.py
repos/0xhubed/agent-trading-arena/tests/codegen/: test_findings.py  test_tools.py
repos/0xhubed/agent-trading-arena/tests/experiment/: test_cost_tracker.py  test_orchestrator.py
repos/0xhubed/agent-trading-arena/tests/forum/: __init__.py  test_discussion_agents.py  test_forum_aware_trader.py  test_forum_service.py
repos/0xhubed/agent-trading-arena/tests/memory/: test_digestion.py  test_principles.py  test_scoring.py
repos/0xhubed/agent-trading-arena/tests/providers/: test_kraken.py
repos/0xhubed/agent-trading-arena/tests/reflexion/: test_clustering.py  test_evoskill.py  test_exemplars.py  test_service.py
repos/bilalmk/todo_correct/backend/: .env.example  .gitignore  CHATKIT_RESPONSE_FORMAT.md  MIGRATION_999_GUIDE.md  README.md  TEST_FIXTURE_FIXES.md  TEST_RESULTS_SUMMARY.md  VERIFICATION_RESULTS.md  alembic.ini  coverage.json  critical_checks.sh  main.py  pyproject.toml  requirements.txt  test_chat.py  test_chat_simple.py  test_results.txt  test_results_fixed.txt  test_summary_visual.txt  verification_summary.txt  verify_results.txt
repos/bilalmk/todo_correct/backend/alembic/: env.py
repos/bilalmk/todo_correct/backend/scripts/: benchmark_queries.py  run_migration_999.sh  seed_database.py  verify_implementation.sh  verify_migration_999.py
repos/bilalmk/todo_correct/backend/src/: main.py
repos/bilalmk/todo_correct/backend/tests/: conftest.py  run_coverage.sh
repos/bilalmk/todo_correct/mcp_server/: .env.example  README.md  pyproject.toml
repos/bilalmk/todo_correct/mcp_server/tests/: __init__.py
(+4461 files in other folders)
