[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-arena"
version = "0.1.0"
description = "AI Agents vs. The Market: A Live Trading Experiment"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Daniel" }
]

dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "pyyaml>=6.0.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "python-dotenv>=1.0.0",
    "langgraph>=0.2.0",
    "langchain-openai>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.35.0",
    "ruff>=0.8.0",
]
api = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "websockets>=14.0",
]
postgres = [
    "asyncpg>=0.29.0",
    "pgvector>=0.2.4",
]
embeddings = [
    "openai>=1.0.0",
]
learning = [
    "asyncpg>=0.29.0",
    "pgvector>=0.2.4",
    "openai>=1.0.0",
]

[project.scripts]
agent-arena = "agent_arena.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["agent_arena"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
