[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for Todo Evolution hackathon"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlmodel>=0.0.22",
    "asyncpg>=0.30.0",
    "pydantic[email]>=2.10.0",
    "pydantic-settings>=2.6.0",
    "pyjwt>=2.9.0",
    "python-jose[cryptography]>=3.3.0",
    "pwdlib[argon2]>=0.2.1",
    "alembic>=1.14.0",
    "slowapi>=0.1.9",
    "python-dotenv>=1.0.1",
    "psycopg>=3.3.2",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28.1",
    "pytest-cov>=7.0.0",
    "aiosqlite>=0.22.1",
    "python-dateutil>=2.9.0",
    # ChatKit Backend Dependencies (Phase III - 008-chatkit-server-backend)
    "openai-chatkit>=1.0.0",
    "openai-agents>=0.6.0",  # OpenAI Agents SDK (not the RL 'agents' package)
    "mcp>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src --cov-report=term-missing --cov-report=html"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
